Googleログインボタンのサイズ指定を解除

--- a/angular-app/src/app/pages/login/login.component.html
+++ b/angular-app/src/app/pages/login/login.component.html
@@ -16,7 +16,6 @@
     data-theme="filled_blue"
     data-text="signin_with"
     data-size="large"
-    data-logo_alignment="left"
-    data-width="400">
+    data-logo_alignment="left">
 </div>
 </mat-card>
