--- a/angular-app/src/app/pages/question/question.component.scss
+++ b/angular-app/src/app/pages/question/question.component.scss
@@ -1,8 +1,11 @@
+h3 {
+    text-align: center;
+}
 .vertical-radio-group {
     display: flex;
     flex-direction: column;
 }
-.next-button {
+.next-button, .previous-button {
     padding: 25px 30px;
 }
 mat-card-title, mat-radio-button {
@@ -13,10 +16,19 @@ mat-card-title, mat-radio-button {
     justify-content: center;
 }
 .radio-button-set {
-    margin: 25px;
+    padding: auto;
+    margin: 10px;
     display: inline-block;
+}
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 .image-radio-group {
     padding-right: auto;
     padding-left: auto;
+}
+.actions-right {
+    position: absolute;
+    right: 15px;
 }
