--- a/angular-app/src/app/pages/start/start.component.html
+++ b/angular-app/src/app/pages/start/start.component.html
@@ -2,8 +2,10 @@
 <h2>ようこそ！Apple信者クイズへ！</h2>
 <h3>さっそく始めましょう！</h3>
 <mat-card>
-<button mat-fab extended routerLink="/stage">
-    <mat-icon>home</mat-icon>
-    ステージ選択画面へ
-</button>
+    <mat-card-content>
+        <button mat-fab extended routerLink="/stage">
+            <mat-icon>home</mat-icon>
+            ステージ選択画面へ
+        </button>
+    </mat-card-content>
 </mat-card>
