--- a/angular-app/src/app/pages/result/result.component.html
+++ b/angular-app/src/app/pages/result/result.component.html
@@ -1,1 +1,25 @@
-<p>result works!</p>
+<h3>リザルト</h3>
+<mat-card>
+    <mat-card-header>
+        <mat-card-title><b>{{stageName}}</b></mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <div class="result-text">
+        <p>10問中<b>{{correctCount}}問</b>正解！</p>
+        <ng-container *ngIf="correctCount > 9">
+            <p>称号「<b>{{achievementTitle}}</b>」を獲得しました！</p>
+            <a href="https://twitter.com/intent/tweet?text=Apple信者クイズ「{{stageName}}」で10問中{{correctCount}}問正解しました！&button_hashtag=Apple信者クイズ" class="twitter-hashtag-button" data-size="large"></a>
+            <div>
+              <button mat-fab extended class="next-button">次のステージへ</button>
+            </div>
+        </ng-container>
+        
+        </div>
+        
+    </mat-card-content>
+    <mat-card-actions align="start">
+        <div class="actions-left">
+          <button mat-stroked-button color="primary" class="previous-button">ステージ選択画面へ</button>
+        </div>
+      </mat-card-actions>
+</mat-card>
