ツールバーサイズの調整

--- a/angular-app/src/styles.scss
+++ b/angular-app/src/styles.scss
@@ -35,6 +35,7 @@ $quiz-appl-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
+@import url('https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap');
 body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
