修正 h2, h3をstyle.scssへ移動 直接指定の解除 「ステージ選択画面」ボタンを中央寄せ bodyのcssを解除 mat-card-titleにbold-textクラスを追加

--- a/angular-app/src/app/pages/login/login.component.html
+++ b/angular-app/src/app/pages/login/login.component.html
@@ -1,7 +1,7 @@
 
 <h2>ようこそ！Apple信者クイズへ！</h2>
 <h3>始めるにはログインしてください。</h3>
-<mat-card>
+<mat-card class="default-card">
     <mat-card-content>
         <div id="g_id_onload"
             data-client_id="831105382657-45pj5bu9j03t4p8lh54qpuegogbjnpso.apps.googleusercontent.com"
