--- a/angular-app/src/app/pages/question/question.component.html
+++ b/angular-app/src/app/pages/question/question.component.html
@@ -1,15 +1,15 @@
 <h3>次の問いに答えなさい。</h3>
-<mat-card>
+<mat-card class="default-card">
     <mat-card-header>
-        <mat-card-title><b>問題</b></mat-card-title>
+        <mat-card-title class="bold-text">問題</mat-card-title>
     </mat-card-header>
     <mat-card-content>
         <p>問題文章です</p>
     </mat-card-content>
 </mat-card>
-<mat-card>
+<mat-card class="default-card">
     <mat-card-header>
-        <mat-card-title><b>回答</b></mat-card-title>
+      <mat-card-title class="bold-text">回答</mat-card-title>
     </mat-card-header>
     <mat-card-content>
         <mat-radio-group class="vertical-radio-group">
