--- a/angular-app/src/app/pages/start/start.component.html
+++ b/angular-app/src/app/pages/start/start.component.html
@@ -1,8 +1,8 @@
 
 <h2>ようこそ！Apple信者クイズへ！</h2>
 <h3>さっそく始めましょう！</h3>
-<mat-card>
-    <mat-card-content>
+<mat-card class="default-card">
+    <mat-card-content align="center">
         <button mat-fab extended routerLink="/stage">
             <mat-icon>home</mat-icon>
             ステージ選択画面へ
