--- a/angular-app/src/styles.scss
+++ b/angular-app/src/styles.scss
@@ -35,6 +35,18 @@ $quiz-appl-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { max-width: 800px; margin-left: auto; margin-right: auto; font-family: Roboto, "Helvetica Neue", sans-serif; }
-mat-card {margin: 10px; padding: 5px;}
+body {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+h2, h3 {
+  text-align: center;
+}
+.main-container {
+  max-width: 800px; margin-left: auto; margin-right: auto;
+}
+.default-card {
+  margin: 10px; padding: 5px;
+}
+.bold-text {
+  font-weight: bold;
+}
