--- a/angular-app/src/styles.scss
+++ b/angular-app/src/styles.scss
@@ -48,5 +48,5 @@ h2, h3 {
   margin: 10px; padding: 5px;
 }
 .bold-text {
-  font-weight: bold;
+  font-weight: bold!important; // importantがないとAngular Material?によって細字になる
 }
