--- a/angular-app/src/app/pages/profile/profile.component.html
+++ b/angular-app/src/app/pages/profile/profile.component.html
@@ -1,1 +1,40 @@
-<p>profile works!</p>
+<h3>あなたのプロフィール</h3>
+<mat-card class="default-card">
+    <mat-card-content>
+        <div align="center">
+            <ngx-skeleton-loader [theme]="{height: '200px', width: '200px'}" appearance="circle"></ngx-skeleton-loader>
+            <h2>{{name}}さん</h2>
+        </div>
+    </mat-card-content>
+</mat-card>
+<mat-card class="default-card">
+    <mat-card-header>
+        <mat-card-title class="bold-text">正解した問題数</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <div align="center">
+            <h2>100問中 <span class="bold-text">{{correctCount}}問</span> 正解！</h2>
+        </div>
+    </mat-card-content>
+</mat-card>
+<mat-card class="default-card">
+    <mat-card-header>
+        <mat-card-title class="bold-text">獲得した実績</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <div align="center">
+            <h3 *ngFor="let achievement of achievements">{{achievement}}</h3>
+        </div>
+    </mat-card-content>
+</mat-card>
+<div align="center">
+    <button mat-stroked-button color="primary" class="default-button" routerLink="/start">タイトルへ戻る</button>
+    
+
+</div>
+<div align="center">
+    <button mat-stroked-button color="primary" class="default-button" routerLink="/stage">ステージ選択画面へ戻る</button>
+    
+
+</div>
+
