--- a/angular-app/src/styles.scss
+++ b/angular-app/src/styles.scss
@@ -37,13 +37,13 @@ $quiz-appl-theme: mat.define-light-theme((
 
 @import url('https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap');
 body {
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 h2, h3 {
   text-align: center;
 }
 .main-container {
-  max-width: 800px; margin-left: auto; margin-right: auto;
+  max-width: 800px; margin: 0 auto;
 }
 .default-card {
   margin: 10px; padding: 5px;
@@ -54,4 +54,7 @@ h2, h3 {
 .center {
   text-align: center;
   align-items: center;
+}
+.default-button {
+  margin: 25px auto;
 }
