--- a/angular-app/src/app/pages/stage/stage.component.html
+++ b/angular-app/src/app/pages/stage/stage.component.html
@@ -1,15 +1,15 @@
 <h3>ステージを選択してください。</h3>
 
-<ng-container *ngFor="let stage of stages; let i = index">
+<ng-container *ngFor="let stage of stages;">
   <mat-card class="default-card">
     <mat-card-header>
-      <mat-card-title><span class="bold-text">ステージ{{ i + 1 }}</span></mat-card-title>
+      <mat-card-title class="bold-text">{{stage.name}}</mat-card-title>
       <button mat-raised-button color="primary" class="start-button">はじめる</button>
     </mat-card-header>
     <mat-card-content>
       <div class="progress-bar-container">
-        <mat-progress-bar mode="determinate" value="100"></mat-progress-bar>
-        <span class="progress-bar-label">正解率 100%</span>
+        <mat-progress-bar mode="determinate" value={{stage.correctCount*10}}></mat-progress-bar>
+        <span class="progress-bar-label">正解率 {{stage.correctCount * 10}}%</span>
       </div>
     </mat-card-content>
   </mat-card>
