6/22修正 align -> text-align インデントズレ question.component.scssの重複 align="start"の削除

--- a/angular-app/src/app/pages/login/login.component.html
+++ b/angular-app/src/app/pages/login/login.component.html
@@ -1,7 +1,7 @@
 
 <h2>ようこそ！Apple信者クイズへ！</h2>
 <h3>始めるにはログインしてください。</h3>
-<mat-card class="default-card">
+<mat-card class="default-card center">
     <mat-card-content>
         <div id="g_id_onload"
             data-client_id="831105382657-45pj5bu9j03t4p8lh54qpuegogbjnpso.apps.googleusercontent.com"
@@ -10,7 +10,7 @@
             data-login_uri="http://localhost:4200/start"
             data-auto_prompt="false">
         </div>
-        <div align="center" class="g_id_signin"
+        <div class="g_id_signin"
             data-type="standard"
             data-shape="rectangular"
             data-theme="filled_blue"
