--- a/angular-app/src/app/pages/stage/stage.component.html
+++ b/angular-app/src/app/pages/stage/stage.component.html
@@ -3,7 +3,7 @@
 <ng-container *ngFor="let stage of stages; let i = index">
   <mat-card class="default-card">
     <mat-card-header>
-      <mat-card-title class="bold-text">ステージ{{ i + 1 }}</mat-card-title>
+      <mat-card-title><span class="bold-text">ステージ{{ i + 1 }}</span></mat-card-title>
       <button mat-raised-button color="primary" class="start-button">はじめる</button>
     </mat-card-header>
     <mat-card-content>
