--- a/angular-app/src/app/pages/start/start.component.html
+++ b/angular-app/src/app/pages/start/start.component.html
@@ -2,7 +2,7 @@
 <h2>ようこそ！Apple信者クイズへ！</h2>
 <h3>さっそく始めましょう！</h3>
 <mat-card class="default-card">
-    <mat-card-content align="center">
+    <mat-card-content class="center">
         <button mat-fab extended routerLink="/stage">
             <mat-icon>home</mat-icon>
             ステージ選択画面へ
