--- a/angular-app/src/styles.scss
+++ b/angular-app/src/styles.scss
@@ -48,5 +48,9 @@ h2, h3 {
   margin: 10px; padding: 5px;
 }
 .bold-text {
-  font-weight: bold!important; // importantがないとAngular Material?によって細字になる
+  font-weight: bold;
+}
+.center {
+  text-align: center;
+  align-items: center;
 }
