6/22#33修正 text-alignを使用 h2/h3タグの削除 プロフィール画面へのボタンを追加

--- a/angular-app/src/app/pages/start/start.component.html
+++ b/angular-app/src/app/pages/start/start.component.html
@@ -9,3 +9,6 @@
         </button>
     </mat-card-content>
 </mat-card>
+<div class="center">
+    <button mat-stroked-button color="primary" class="default-button" routerLink="/profile">プロフィールを見る</button>
+</div>
