--- a/angular-app/src/app/pages/question/question.component.html
+++ b/angular-app/src/app/pages/question/question.component.html
@@ -4,7 +4,10 @@
     <mat-card-title><span class="bold-text">問題</span></mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <p>問題文章です</p>
+    <p>{{question.question_text}}</p>
+    <ng-container *ngIf="question.question_image_url !== null">
+      <img class="question-image" src="{{question.question_image_url}}">
+    </ng-container>
   </mat-card-content>
 </mat-card>
 <mat-card class="default-card">
@@ -12,25 +15,29 @@
     <mat-card-title><span class="bold-text">回答</span></mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <mat-radio-group class="vertical-radio-group">
-      <ng-container *ngFor="let choice of choices">
-        <mat-radio-button [value]="choice">{{choice}}</mat-radio-button>
-      </ng-container>
-    </mat-radio-group>
-    <mat-radio-group class="image-radio-group">
-      <div class="grid-container">
+    <ng-container *ngIf="question.answer_type === 'text'; else elseBlock">
+      <mat-radio-group class="vertical-radio-group">
         <ng-container *ngFor="let choice of choices">
-          <div class="radio-button-set">
-            <div>
-              <ngx-skeleton-loader [theme]="{'height': '140px'}"></ngx-skeleton-loader>
-            </div>
-            <div>
-              <mat-radio-button class="radio-button-image" [value]="choice"></mat-radio-button>
-            </div>
-          </div>
+          <mat-radio-button [value]="choice">{{choice.content}}</mat-radio-button>
         </ng-container>
-      </div>
-    </mat-radio-group>
+      </mat-radio-group>
+    </ng-container>
+    <ng-template #elseBlock>
+      <mat-radio-group class="image-radio-group">
+        <div class="grid-container">
+          <ng-container *ngFor="let choice of choices">
+            <div class="radio-button-set">
+              <div>
+                <img src="{{choice.content}}">
+              </div>
+              <div>
+                <mat-radio-button class="radio-button-image" [value]="choice"></mat-radio-button>
+              </div>
+            </div>
+          </ng-container>
+        </div>
+      </mat-radio-group>
+    </ng-template>
   </mat-card-content>
   <mat-card-actions>
     <div class="actions-left">
