--- a/angular-app/src/app/pages/result/result.component.html
+++ b/angular-app/src/app/pages/result/result.component.html
@@ -1,14 +1,14 @@
 <h3>リザルト</h3>
 <mat-card>
   <mat-card-header>
-    <mat-card-title><span class="bold-text">{{stageName}}</span></mat-card-title>
+    <mat-card-title><span class="bold-text">{{result.stage_name}}</span></mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <div class="result-text">
-      <p>10問中<span class="bold-text">{{correctCount}}問</span>正解！</p>
-      <ng-container *ngIf="correctCount > 9; else elseBlock">
-        <p>称号「<span class="bold-text">{{achievementTitle}}</span>」を獲得しました！</p>
-        <a href="https://twitter.com/intent/tweet?text=Apple信者クイズ「{{stageName}}」で10問中{{correctCount}}問正解しました！&button_hashtag=Apple信者クイズ"
+      <p>10問中<span class="bold-text">{{result.correct_count}}問</span>正解！</p>
+      <ng-container *ngIf="result.correct_count > 9; else elseBlock">
+        <p>称号「<span class="bold-text">{{result.achievement}}</span>」を獲得しました！</p>
+        <a href="https://twitter.com/intent/tweet?text=Apple信者クイズ「{{result.stage_name}}」で10問中{{result.correct_count}}問正解しました！&button_hashtag=Apple信者クイズ"
           class="twitter-hashtag-button" data-size="large"></a>
         <div>
           <button mat-fab extended class="next-button">次のステージへ</button>
