--- a/angular-app/src/app/pages/login/login.component.html
+++ b/angular-app/src/app/pages/login/login.component.html
@@ -3,11 +3,11 @@
 <h3>始めるにはログインしてください。</h3>
 <mat-card class="default-card center">
     <mat-card-content>
-        <div id="g_id_onload"
+        <!-- <div id="g_id_onload"
             data-client_id="831105382657-45pj5bu9j03t4p8lh54qpuegogbjnpso.apps.googleusercontent.com"
             data-context="signin"
             data-ux_mode="popup"
-            data-login_uri="http://localhost:4200/start"
+            data-login_uri="http://localhost:4200/login"
             data-auto_prompt="false">
         </div>
         <div class="g_id_signin"
@@ -17,6 +17,7 @@
             data-text="signin_with"
             data-size="large"
             data-logo_alignment="left">
-        </div>
+        </div> -->
+        <asl-google-signin-button type='standard' size='large'></asl-google-signin-button>
     </mat-card-content>
 </mat-card>
