--- a/angular-app/src/app/pages/question/question.component.html
+++ b/angular-app/src/app/pages/question/question.component.html
@@ -16,7 +16,7 @@
   </mat-card-header>
   <mat-card-content>
     <ng-container *ngIf="question.answer_type === 'text'; else elseBlock">
-      <mat-radio-group class="vertical-radio-group">
+      <mat-radio-group class="vertical-radio-group" [(ngModel)]="selectedChoice">
         <ng-container *ngFor="let choice of question.choices">
           <mat-radio-button [value]="choice">{{choice.content}}</mat-radio-button>
         </ng-container>
@@ -44,7 +44,7 @@
       <button mat-stroked-button color="primary" class="previous-button">前の問題へ</button>
     </div>
     <div class="actions-right">
-      <button mat-raised-button color="primary" class="next-button">次の問題へ</button>
+      <button mat-raised-button (click)="nextQuestion()" color="primary" class="next-button">次の問題へ</button>
     </div>
   </mat-card-actions>
 </mat-card>
