--- a/angular-app/src/app/pages/stage/stage.component.html
+++ b/angular-app/src/app/pages/stage/stage.component.html
@@ -4,7 +4,7 @@
   <mat-card class="default-card">
     <mat-card-header>
       <mat-card-title class="bold-text">{{stage.name}}</mat-card-title>
-      <button mat-raised-button color="primary" class="start-button">はじめる</button>
+      <button mat-raised-button color="primary" class="start-button" [routerLink]="['/question', { stage: stage.id+1 }]">はじめる</button>
     </mat-card-header>
     <mat-card-content>
       <div class="progress-bar-container">
