--- a/angular-app/src/app/pages/question/question.component.html
+++ b/angular-app/src/app/pages/question/question.component.html
@@ -1,7 +1,7 @@
 <h3>次の問いに答えなさい。</h3>
 <mat-card class="default-card">
   <mat-card-header>
-    <mat-card-title><span class="bold-text">問題</span></mat-card-title>
+    <mat-card-title><span class="bold-text">問題{{question.id%10}}</span></mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <p>{{question.question_text}}</p>
@@ -23,7 +23,7 @@
       </mat-radio-group>
     </ng-container>
     <ng-template #elseBlock>
-      <mat-radio-group class="image-radio-group">
+      <mat-radio-group class="image-radio-group" [(ngModel)]="selectedChoice">
         <div class="grid-container">
           <ng-container *ngFor="let choice of question.choices">
             <div class="radio-button-set">
