--- a/angular-app/src/app/pages/stage/stage.component.html
+++ b/angular-app/src/app/pages/stage/stage.component.html
@@ -1,10 +1,10 @@
 <h3>ステージを選択してください。</h3>
 
-<ng-container *ngFor="let stage of stages;">
+<ng-container *ngFor="let stage of stages; let i = index">
   <mat-card class="default-card">
     <mat-card-header>
       <mat-card-title class="bold-text">{{stage.name}}</mat-card-title>
-      <button mat-raised-button color="primary" class="start-button" [routerLink]="['/question', { stage: stage.id+1 }]">はじめる</button>
+      <button mat-raised-button color="primary" class="start-button" [routerLink]="['/question', { stage: stage.id+1 }]" [disabled]="stages_is_disabled[i]">はじめる</button>
     </mat-card-header>
     <mat-card-content>
       <div class="progress-bar-container">
