問題番号が正しく表示されるように変更

--- a/angular-app/src/app/pages/question/question.component.html
+++ b/angular-app/src/app/pages/question/question.component.html
@@ -1,7 +1,7 @@
 <h3>次の問いに答えなさい。</h3>
 <mat-card class="default-card">
   <mat-card-header>
-    <mat-card-title><span class="bold-text">問題{{question.id%10}}</span></mat-card-title>
+    <mat-card-title><span class="bold-text">問題{{questionNumber}}</span></mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <p>{{question.question_text}}</p>
