--- a/angular-app/src/app/pages/result/result.component.html
+++ b/angular-app/src/app/pages/result/result.component.html
@@ -5,10 +5,10 @@
   </mat-card-header>
   <mat-card-content>
     <div class="result-text">
-      <p>10問中<span class="bold-text">{{correct_count}}問</span>正解！</p>
-      <ng-container *ngIf="correct_count > 9; else elseBlock">
+      <p>10問中<span class="bold-text">{{correctCount}}問</span>正解！</p>
+      <ng-container *ngIf="correctCount > 9; else elseBlock">
         <p>称号「<span class="bold-text">{{result.achievement}}</span>」を獲得しました！</p>
-        <a href="https://twitter.com/intent/tweet?text=Apple信者クイズ「ステージ{{result.stage_number}}」で10問中{{correct_count}}問正解しました！&button_hashtag=Apple信者クイズ"
+        <a href="https://twitter.com/intent/tweet?text=Apple信者クイズ「ステージ{{result.stage_number}}」で10問中{{correctCount}}問正解しました！&button_hashtag=Apple信者クイズ"
           class="twitter-hashtag-button" data-size="large"></a>
         <div>
           <button mat-fab extended routerLink="/stage">ステージ選択画面へ戻る</button>
