--- a/angular-app/src/app/pages/result/result.component.html
+++ b/angular-app/src/app/pages/result/result.component.html
@@ -1,7 +1,7 @@
 <h3>リザルト</h3>
 <mat-card>
   <mat-card-header>
-    <mat-card-title><span class="bold-text">ステージ{{result.stage_number}}</span></mat-card-title>
+    <mat-card-title><span class="bold-text">ステージ{{currentStage}}</span></mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <div class="result-text">
