--- a/angular-app/src/app/pages/stage/stage.component.html
+++ b/angular-app/src/app/pages/stage/stage.component.html
@@ -14,3 +14,9 @@
     </mat-card-content>
   </mat-card>
 </ng-container>
+<div class="center">
+  <button mat-stroked-button color="primary" class="default-button" routerLink="/profile">プロフィールを見る</button>
+</div>
+<div class="center">
+  <button mat-stroked-button color="primary" class="default-button" routerLink="/start">タイトルへ戻る</button>
+</div>
