--- a/angular-app/src/app/components/toolbar/toolbar.component.scss
+++ b/angular-app/src/app/components/toolbar/toolbar.component.scss
@@ -3,7 +3,10 @@ mat-toolbar {
     margin: 0;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     z-index: 100;
     font-size: 20px;
+}
+.spacer {
+    flex: 1 1 auto;
 }
