--- a/angular-app/src/app/pages/profile/profile.component.html
+++ b/angular-app/src/app/pages/profile/profile.component.html
@@ -22,6 +22,8 @@
     </mat-card-content>
 </mat-card>
 <div class="center">
-    <button mat-stroked-button color="primary" class="default-button" routerLink="/start">タイトルへ戻る</button>
     <button mat-stroked-button color="primary" class="default-button" routerLink="/stage">ステージ選択画面へ戻る</button>
+</div>
+<div class="center">
+    <button mat-stroked-button color="primary" class="default-button" routerLink="/start">タイトルへ戻る</button>
 </div>
